# services/BrainzSchedules/internal/dtos/date_time_change_dto.go
@@ -1,0 +1,9 @@
+package dtos
+
+import "time"
+
+type DateTimeChangeDTO struct {
+	InstitutionID uint64         `json:"institution_id"`
+	Date          time.Time      `json:"date"`
+	LessonTimings LessonsTimings `json:"lesson_timings"`
+}
